Stable version Remove unused response
