# swagger.yaml
@@ -56,7 +56,21 @@ components:
         - created_at
         - images
         - videos
+    OutputData:
+      type: object
+      properties:
+        state:
+          type: string
+          example: Done
+        output:
+          $ref: "#/components/schemas/ImportantInfo"
+        error:
+            $ref: "#/components/schemas/ErrInfo"
 
+      # Both properties are required
+      required:
+        - state
+        - output
     Media:
       type: object
       properties:
@@ -102,7 +116,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ImportantInfo'
+                $ref: '#/components/schemas/OutputData'
         '404':
             description: Uncorrect data please try again. Username examples (mua.shor, steptospace ...) Without terminal symbols
             content:
